[package]
name = "hackhub2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.4", default-features = false, features = ["sqlite", "chrono", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
rusqlite = "0.29.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
